--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +10,213 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
+    <section class="header">
+
+        <div class="search-area">
+            <div>
+                <img class="search-icon" src="icons/magnify.svg">
+                <input type="text">
+            </div>
+            <div>
+                <img class="bell-icon" src="icons/bell-ring-outline.svg">
+                <img class="avatar" src="icons/man.png">
+                <div class="user-name">Morgan Oakley</div>
+            </div>
+        </div>
+
+        <div class="bottom-area">
+            <div>
+                <img src="icons/man.png">
+                <div>
+                    <div>Hi there,</div>
+                    <div>Morgan Oakley (@morgan)</div>
+                </div>
+            </div>
+            <div class="buttons">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="sidebar">
+        <div class="sidebar-content">
+            <div class="logo">Dashboard</div>
+            <div class="primary-nav">
+                <ul>
+                    <li>Home</li>
+                    <li>Profile</li>
+                    <li>Messages</li>
+                    <li>History</li>
+                    <li>Tasks</li>
+                    <li>Communities</li>
+                </ul>
+            </div>
+            <div class="secondary-nav">
+                <ul>
+                    <li>Settings</li>
+                    <li>Support</li>
+                    <li>Privacy</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <section class="content">
+
+        <div class="projects">
+            <div class="title">Your Projects</div>
+            <ul>
+                <li>
+                    <h3>Super Cool Project</h3>
+                    <p>
+                        Sed tempus ut lacus ut scelerisque.
+                        Suspendisse sollicitudin nibh erat,
+                        id facilisis felis accumsan nec.
+                    </p>
+                    <div class="icons">
+                        <img src="/icons/star-plus-outline.svg">
+                        <img src="/icons/eye-plus-outline.svg">
+                        <img src="/icons/source-fork.svg">
+                    </div>
+                </li>
+                <li>
+                    <h3>Impossible App</h3>
+                    <p>
+                        In hac habitasse platea dictumst. Vivamus dictum
+                        rutrum arcu, a placerat velit sagittis id.
+                    </p>
+                    <div class="icons">
+                        <img src="/icons/star-plus-outline.svg">
+                        <img src="/icons/eye-plus-outline.svg">
+                        <img src="/icons/source-fork.svg">
+                    </div>
+                </li>
+                <li>
+                    <h3>Ad Blocker</h3>
+                    <p>
+                        Quisque eget rutrum nisl. Nam augue justo, cursus vitae
+                        metus vel, pharetra hendrerit felis. Aliquam sed
+                        malesuada eros.
+                    </p>
+                    <div class="icons">
+                        <img src="/icons/star-plus-outline.svg">
+                        <img src="/icons/eye-plus-outline.svg">
+                        <img src="/icons/source-fork.svg">
+                    </div>
+                </li>
+                <li>
+                    <h3>Less Cool Project</h3>
+                    <p>
+                        Nullam condimemtum ipsum ut lectus vehicula
+                        consectetur. Quisque sed dolor tincidunt, consectetur
+                        sapien et, facilisis dolor. Duis sem purus, dignissim ut
+                        sapien in, varius pellentesque lacus.
+                    </p>
+                    <div class="icons">
+                        <img src="/icons/star-plus-outline.svg">
+                        <img src="/icons/eye-plus-outline.svg">
+                        <img src="/icons/source-fork.svg">
+                    </div>
+                </li>
+                <li>
+                    <h3>Easy Peasy App</h3>
+                    <p>
+                        Etiam cursus eros ac efficitur fringilla. Vestibulum
+                        dignissim urna eget accumsan aliquam. Curabitur
+                        dignissim nisi in tortor commodo, ac bibendum magna
+                        tincidunt.
+                    </p>
+                    <div class="icons">
+                        <img src="/icons/star-plus-outline.svg">
+                        <img src="/icons/eye-plus-outline.svg">
+                        <img src="/icons/source-fork.svg">
+                    </div>
+                </li>
+                <li>
+                    <h3>Money Maker</h3>
+                    <p>
+                        Praesent convallis, libero quis congue elementum, nunc
+                        ante faucibus sapient, ac scelerisque tortor purus sit
+                        amet ex. Pellentesque mollis nec sem vel aliquam.
+                    </p>
+                    <div class="icons">
+                        <img src="/icons/star-plus-outline.svg">
+                        <img src="/icons/eye-plus-outline.svg">
+                        <img src="/icons/source-fork.svg">
+                    </div>
+                </li>
+            </ul>
+        </div>
+
+        <div class="announcements">
+            <div class="title">Announcements</div>
+            <ul>
+                <li>
+                    <h3>Site Maintenance</h3>
+                    <p>
+                        Vestibulum condimentum tellus lacus, in accumsan
+                        elit maximus ac. Donec hendrerit sodales congue...
+                    </p>
+                </li>
+                <li>
+                    <h3>Community Share Day</h3>
+                    <p>
+                        Vestibulum condimentum tellus lacus, in accumsan
+                        elit maximus ac. Donec hendrerit sodales congue...
+                    </p>
+                </li>
+                <li>
+                    <h3>Updated Privacy Policy</h3>
+                    <p>
+                        Vestibulum condimentum tellus lacus, in accumsan
+                        elit maximus ac. Donec hendrerit sodales congue...
+                    </p>
+                </li>
+            </ul>
+        </div>
+
+        <div class="trending">
+            <div class="title">Trending</div>
+            <ul>
+                <li>
+                    <img src="/icons/man.png">
+                    <div>
+                        <div>@teegan</div>
+                        <div>World Peace Builder</div>
+                    </div>
+                </li>
+                <li>
+                    <img src="/icons/man.png">
+                    <div>
+                        <div>@morgan</div>
+                        <div>Super cool project</div>
+                    </div>
+                </li>
+                <li>
+                    <img src="/icons/man.png">
+                    <div>
+                        <div>@kendall</div>
+                        <div>Life changing app</div>
+                    </div>
+                </li>
+                <li>
+                    <img src="/icons/man.png">
+                    <div>
+                        <div>@alex</div>
+                        <div>No Traffic Maker</div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+
+    </section>
+
 </body>
+
 </html>
