--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                         id facilisis felis accumsan nec.
                     </p>
                     <div class="icons">
-                        <img src="/icons/star-plus-outline.svg">
-                        <img src="/icons/eye-plus-outline.svg">
-                        <img src="/icons/source-fork.svg">
+                        <img src="icons/star-plus-outline.svg">
+                        <img src="icons/eye-plus-outline.svg">
+                        <img src="icons/source-fork.svg">
                     </div>
                 </li>
                 <li>
@@ -92,9 +92,9 @@
                         rutrum arcu, a placerat velit sagittis id.
                     </p>
                     <div class="icons">
-                        <img src="/icons/star-plus-outline.svg">
-                        <img src="/icons/eye-plus-outline.svg">
-                        <img src="/icons/source-fork.svg">
+                        <img src="icons/star-plus-outline.svg">
+                        <img src="icons/eye-plus-outline.svg">
+                        <img src="icons/source-fork.svg">
                     </div>
                 </li>
                 <li>
@@ -119,9 +119,9 @@
                         sapien in, varius pellentesque lacus.
                     </p>
                     <div class="icons">
-                        <img src="/icons/star-plus-outline.svg">
-                        <img src="/icons/eye-plus-outline.svg">
-                        <img src="/icons/source-fork.svg">
+                        <img src="icons/star-plus-outline.svg">
+                        <img src="icons/eye-plus-outline.svg">
+                        <img src="icons/source-fork.svg">
                     </div>
                 </li>
                 <li>
@@ -133,9 +133,9 @@
                         tincidunt.
                     </p>
                     <div class="icons">
-                        <img src="/icons/star-plus-outline.svg">
-                        <img src="/icons/eye-plus-outline.svg">
-                        <img src="/icons/source-fork.svg">
+                        <img src="icons/star-plus-outline.svg">
+                        <img src="icons/eye-plus-outline.svg">
+                        <img src="icons/source-fork.svg">
                     </div>
                 </li>
                 <li>
@@ -146,9 +146,9 @@
                         amet ex. Pellentesque mollis nec sem vel aliquam.
                     </p>
                     <div class="icons">
-                        <img src="/icons/star-plus-outline.svg">
-                        <img src="/icons/eye-plus-outline.svg">
-                        <img src="/icons/source-fork.svg">
+                        <img src="icons/star-plus-outline.svg">
+                        <img src="icons/eye-plus-outline.svg">
+                        <img src="icons/source-fork.svg">
                     </div>
                 </li>
             </ul>
@@ -185,28 +185,28 @@
             <div class="title">Trending</div>
             <ul>
                 <li>
-                    <img src="/icons/man.png">
+                    <img src="icons/man.png">
                     <div>
                         <div>@teegan</div>
                         <div>World Peace Builder</div>
                     </div>
                 </li>
                 <li>
-                    <img src="/icons/man.png">
+                    <img src="icons/man.png">
                     <div>
                         <div>@morgan</div>
                         <div>Super cool project</div>
                     </div>
                 </li>
                 <li>
-                    <img src="/icons/man.png">
+                    <img src="icons/man.png">
                     <div>
                         <div>@kendall</div>
                         <div>Life changing app</div>
                     </div>
                 </li>
                 <li>
-                    <img src="/icons/man.png">
+                    <img src="icons/man.png">
                     <div>
                         <div>@alex</div>
                         <div>No Traffic Maker</div>
