--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
                         malesuada eros.
                     </p>
                     <div class="icons">
-                        <img src="/icons/star-plus-outline.svg">
-                        <img src="/icons/eye-plus-outline.svg">
-                        <img src="/icons/source-fork.svg">
+                        <img src="icons/star-plus-outline.svg">
+                        <img src="icons/eye-plus-outline.svg">
+                        <img src="icons/source-fork.svg">
                     </div>
                 </li>
                 <li>
